# bluetooth-rfcomm-server

./: CMakeLists.txt  FdBuffer.cpp  FdBuffer.h  README.md  SocketServer.cpp  SocketServer.h  main.cpp
src/: CMakeLists.txt  main.cpp
